--- a/app/static/main.css
+++ b/app/static/main.css
@@ -38,3 +38,12 @@ body {
     --tag-text-color: #8950fc;
     border-radius: 4px;
 }
+
+.v-center {
+    display: flex;
+    align-items: center;
+ }
+
+.result-col {
+    margin-bottom: 1rem;
+}
