fix typo in result page

--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -77,7 +77,7 @@
                                                 </ul>
                                                 " data-bs-trigger="hover"><i class="bi bi-question-circle-fill"></i>
                                             &nbsp;Why is this game
-                                            recommend</a>
+                                            recommended</a>
                                     </div>
                                 </div>
                             </div>
