recommendation reason + game input

--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -71,7 +71,7 @@
                                         <a role="button" class="text-info" data-bs-html="true" data-bs-toggle="popover"
                                             data-bs-content="
                                                 <ul class='list-group'>
-                                                    <li class='list-group-item'>Example Reason 1</li>
+                                                    <li class='list-group-item'>{{ game.matching_tokens }}</li>
                                                     <li class='list-group-item'>Example Reason 2</li>
                                                     <li class='list-group-item'>Example Reason 3</li>
                                                 </ul>
