--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,8 +8,8 @@
     <meta http-equiv="Expires" content="0" />
     <!-- CSS only -->
     <link rel="icon" href="../static/images/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tagify/4.0.4/tagify.min.css"
         integrity="sha512-Z44wu8M4mVpeK2GbdkCj4X/FqgPeMzAPQEwLtit80lMkreR2w4J4uPuSRQYlmGUt3e0QPGZBaA2A2Yn4E8rHAw=="
@@ -24,7 +24,7 @@
             {% block content %} {% endblock %}
         </div>
         <div class="footer row justify-content-md-center">
-            <p class="blockquote-footer"><cite>Group Members: Grace Zhao(rz92), Yuwen
+            <p class="blockquote-footer" style="text-align: center;"><cite>Group Members: Grace Zhao(rz92), Yuwen
                     Cai(yc687), Yitian Lin(yl698), Chang Wei(cw887), Qichen Hu(qh75)</cite></p>
         </div>
     </div>
