--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -4,7 +4,7 @@
     <div class="col-12">
         <div class="placeholder"></div>
         <h1 class="display-2 text-white search-title">NEXTGAME</h1>
-        <p class="text-white-50 lead">&nbsp;Find your next favorite game via books/movies/games you enjoy. Apply
+        <p class="text-white-50 lead">&nbsp;Find your next favorite game via movies/games you enjoy. Apply
             tags to further adjust to your quirks. <strong>Steam games only.</strong></p>
         <div class="placeholder"></div>
         <div class="card search-card">
