Fix typo in search

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -176,7 +176,7 @@
     });
 
     function formIncompleteAlert(custom = "") {
-        alert("Please compelte the form before submitting!\n" + custom);
+        alert("Please complete the form before submitting!\n" + custom);
     }
 
     let genres = JSON.parse($("#genresData").val());
